<resources>
    <string name="app_name">Detective Android</string>

    <string name="str_activity_main_btn">skip</string>
    <string name="str_activity_main_teaser">Vous êtes appelés sur une enquête pour élucider un meurtre. Soyez vigilant !</string>
    <string name="frag_start_game_textview_presentation">Bienvenue dans Detective Android ! Vous allez être amenés à élucider un grand mystère, cliquez sur le bouton pour commencer.</string>

    <string name="str_activity_home_btn_new_game">Sart new game</string>
    <string name="str_activity_home_btn_resume_game">Resume previous game</string>
    <string name="str_activity_home_btn_exit_game">Exit game</string>

    <string name="content_desc_activity_main_background_image">background image</string>
    <string name="content_desc_activity_home_foreground_img">main image of screen</string>
    <string name="content_desc_frag_start_game_background_img">main image of screen</string>
    <string name="dialog_frag_content_desc">map of the game</string>

    <string name="activity_game_inventory_access_desc">access to user inventory and game options</string>
    <string name="menu_pause">Pause</string>
    <string name="menu_map">map</string>
</resources>