<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@color/colorPrimaryLight">

    <Button
        android:id="@+id/activity_home_btn_new_game"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/btn_shape_style"
        android:text="@string/str_activity_home_btn_new_game"
        app:layout_constraintBottom_toTopOf="@+id/activity_home_btn_resume_game"
        app:layout_constraintEnd_toEndOf="@+id/activity_home_btn_resume_game"
        app:layout_constraintStart_toStartOf="@+id/activity_home_btn_resume_game"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/activity_home_btn_resume_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/btn_shape_style"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/str_activity_home_btn_resume_game"
        app:layout_constraintBottom_toTopOf="@+id/activity_home_btn_quit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_home_btn_new_game" />

    <Button
        android:id="@+id/activity_home_btn_quit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_shape_style"
        android:text="@string/str_activity_home_btn_exit_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/activity_home_btn_resume_game"
        app:layout_constraintStart_toStartOf="@+id/activity_home_btn_resume_game"
        app:layout_constraintTop_toBottomOf="@+id/activity_home_btn_resume_game" />

    <ImageView
        android:id="@+id/activity_home_img"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:padding="40dp"
        app:layout_constraintBottom_toTopOf="@+id/activity_home_btn_new_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/magnifying_glass"
        android:contentDescription="@string/content_desc_activity_home_foreground_img" />
</android.support.constraint.ConstraintLayout>